--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Dieter!</title>
 </head>
 <body>
-<h1>Hello Test!</h1>
+<h1>Hello Test! This is a great success</h1>
 </body>
 </html>
